--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" placeholder="Insira seu primeiro nome!"/>
     </div>
+    <div>
+        <label for="sobrenome">Sobrenome:</label>
+        <input type="text" id="sobrenome" name="sobrenome" placeholder="Insira seu sobrenome!"/>
+    </div>
+    <div>
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" placeholder="Insira seu email!"/>
+    </div>
+    <div>
+        <label for="senha">Senha:</label>
+        <input type="password" id="senha" name="senha" placeholder="Insira sua senha!"/>
+    </div>
+    <div>
+        <label for="confirmarsenha">Confirmar senha:</label>
+        <input type="password" id="confirmarsenha" name="confirmarsenha" placeholder="Repita sua senha!"/>
+    </div>
+
+    
 
 
 
