--- a/index.html
+++ b/index.html
@@ -31,8 +31,25 @@
         <label for="confirmarsenha">Confirmar senha:</label>
         <input type="password" id="confirmarsenha" name="confirmarsenha" placeholder="Repita sua senha!"/>
     </div>
+    <div>
+        <label for="telefone">Telefone:</label>
+        <input type="tel" id="telefone" name="telefone" placeholder="Insira seu telefone"/>
+    </div>
+    <div>
+        <label for="sexo">Sexo:</label>
+        <select name="sexo" id="sexo">
+            <option value="">Informar...</option>
+            <option value="m">Masculino</option>
+            <option value="f">Feminino</option>
+            <option value="x">Não Informar</option>
+        </select>
+    </div>
+    <div>
+        <label for="newsletter">Newsletter</label>
+        <input type="checkbox" id="newsletter" name="newsletter"/>
+        <small>Desejo receber novidades</small>
+    </div>
 
-    
 
 
 
