--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Cadastro Geral</title>
 </head>
 <body>
-
     <h1>CADASTRO GERAL</h1>
     <form action="" id="formulario" method="POST" name="formulario">
     <legend> Cadastro Geral </legend>
@@ -49,11 +48,9 @@
         <input type="checkbox" id="newsletter" name="newsletter"/>
         <small>Desejo receber novidades</small>
     </div>
-
-
-
-
-
+    <div>
+        <button type="button">Enviar</button>
+    </div>
     </form>
     
 </body>
