--- a/index.html
+++ b/index.html
@@ -1,96 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro Geral</title>
     <link rel="stylesheet" href="css/formulario.css" />
-</head>
-<body>
-    <h1>CADASTRO GERAL</h1>
+    <script src="./javascript/validateForm"></script>
+  </head>
+  <body>
+    <h1 class="title">CADASTRO GERAL</h1>
     <form action="" id="formulario" method="POST" name="formulario">
-    <legend> Cadastro Geral </legend>
-    <div class="colunas">
+      <legend>Cadastro Geral</legend>
+      <div class="colunas">
         <div class="input-group">
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" placeholder="Insira seu primeiro nome!"/>
+          <label for="nome">Nome:</label>
+          <input
+            type="text"
+            id="nome"
+            name="nome"
+            placeholder="Insira seu primeiro nome!"
+          />
         </div>
 
         <div class="input-group">
-            <label for="sobrenome">Sobrenome:</label>
-            <input type="text" id="sobrenome" name="sobrenome" placeholder="Insira seu sobrenome!"/>
+          <label for="sobrenome">Sobrenome:</label>
+          <input
+            type="text"
+            id="sobrenome"
+            name="sobrenome"
+            placeholder="Insira seu sobrenome!"
+          />
         </div>
-    </div>
-    <div class="colunas">
+      </div>
+      <div class="colunas">
         <div class="input-group">
-            <label for="telefone">Telefone:</label>
-            <input type="tel" id="telefone" name="telefone" placeholder="Insira seu telefone"/>
+          <label for="telefone">Telefone:</label>
+          <input
+            type="tel"
+            id="telefone"
+            name="telefone"
+            placeholder="Insira seu telefone"
+          />
         </div>
         <div class="input-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Insira seu email"/>
+          <label for="email">Email:</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Insira seu email"
+          />
         </div>
-    </div>
-    <div class="colunas">
+      </div>
+      <div class="colunas">
         <div class="input-group">
-            <label for="senha">Senha:</label>
-            <input type="password" id="senha" name="senha" placeholder="Insira sua senha!"/>
+          <label for="senha">Senha:</label>
+          <input
+            type="password"
+            id="senha"
+            name="senha"
+            placeholder="Insira sua senha!"
+          />
         </div>
 
         <div class="input-group">
-            <label for="confirmarsenha">Confirmar senha:</label>
-            <input type="password" id="confirmarsenha" name="confirmarsenha" placeholder="Repita sua senha!"/>
+          <label for="confirmarsenha">Confirmar senha:</label>
+          <input
+            type="password"
+            id="confirmarSenha"
+            name="confirmarsenha"
+            placeholder="Repita sua senha!"
+          />
         </div>
-    </div>
-    <div class="colunas">
+      </div>
+      <div class="colunas">
         <div class="input-group">
-            <label for="sexo">Sexo:</label>
-            <select name="sexo" id="sexo">
-                <option value="">Informar...</option>
-                <option value="m">Masculino</option>
-                <option value="f">Feminino</option>
-                <option value="x">Não Informar</option>
-            </select>
+          <label for="sexo">Sexo:</label>
+          <select name="sexo" id="sexo">
+            <option value="">Informar...</option>
+            <option value="m">Masculino</option>
+            <option value="f">Feminino</option>
+            <option value="x">Não Informar</option>
+          </select>
         </div>
         <div class="input-group">
-            <label for="newsletter">Newsletter</label>
-            <input type="checkbox" id="newsletter" name="newsletter"/>
-            <small>Desejo receber novidades</small>
+          <label for="newsletter">Newsletter</label>
+          <input type="checkbox" id="newsletter" name="newsletter" />
+          <small>Desejo receber novidades</small>
         </div>
-    </div>
-    <div class="rodape">
+      </div>
+      <div class="rodape">
         <button type="button" class="botao" onclick="validar()">Enviar</button>
-    </div>
+      </div>
     </form>
-
-    <script>
-         function validar() {
-          var nome = document.getElementById("nome");
-          var sobrenome = document.getElementById("sobrenome");
-          var email = document.getElementById("email");
-          var senha = document.getElementById("senha");
-          var confirmarsenha = document.getElementById("confirmarsenha");
-          var telefone = document.getElementById("telefone");
-          var cep = document.getElementById("cep");
-          var sexo = document.getElementById("sexo");
-          var newsletter = document.getElementById("newsletter").checked;
-
-         
-          if (nome.value == "") {
-            alert("Nome não informado");
-            nome.focus();
-            return;
-          }
-          if (sobrenome.value == "") {
-            alert("Sobrenome não informado");
-            sobrenome.focus();
-            return;
-          }
-        }
-    </script>
-
-
-    
-</body>
+  </body>
 </html>
