feat:  MySQL Integration

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro Geral</title>
-    <link rel="stylesheet" href="css/formulario.css" />
-    <script src="./javascript/validateForm"></script>
+    <link type="text/css" href="css/formulario.css" rel="stylesheet"/>
   </head>
   <body>
     <h1 class="title">CADASTRO GERAL</h1>
-    <form action="" id="formulario" method="POST" name="formulario">
+    <form action="formulario" id="formulario" method="POST" name="formulario">
       <legend>Cadastro Geral</legend>
       <div class="colunas">
         <div class="input-group">
@@ -94,5 +93,6 @@
         <button type="button" class="botao" onclick="validar()">Enviar</button>
       </div>
     </form>
+    <script src="javascript/validateForm.js"></script>
   </body>
 </html>
